refactor: [rename] Article(도메인), ArticleJpaEntity로 분리 관련 내용 적용